flux-snapshot/2023-04-20-21-26-28-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0658]: custom inner attributes are unstable
 --> src/insertion_sort.rs:1:4
  |
1 | #![flux::defs {
  |    ^^^^^^^^^^
  |
  = note: see issue #54726 <https://github.com/rust-lang/rust/issues/54726> for more information
  = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable

For more information about this error, try `rustc --explain E0658`.
error: could not compile `sorting` (bin "sorting") due to previous error
